--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -55,7 +55,7 @@
 
 .card-container {
   width: 80vw;
-  height: 250px;
+  height: 350px;
   max-width: 350px;
   box-shadow: 0 0 5px #0002;
   background-color: #fff;
@@ -64,45 +64,67 @@
   transition: all 0.3s;
 }
 
-.card-container:hover {
-  scale: 1.1;
+.home .img-container {
+  width: 100%;
+  height: 200px;
+  background-color: #ccc;
+  transition: all 0.3s;
 }
 
-.img-container {
+.home .img-container img {
   width: 100%;
-  height: 55%;
-  background-color: #ccc;
+  height: 100%;
+  object-fit: cover;
 }
+
+.home .img-container:hover {
+  transform: scale(1.1);
+}
+
 
 .info-container {
+  display: flex;
   flex-direction: column;
   width: 100%;
   height: 45%;
   padding: 10px;
+  position: relative;
 }
 
-.info {
+.info-container .info {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #bfb9c46c;
 }
 
-#product-name {
-  font-size: 0.75rem;
+.info-container .info #product-name {
+  font-size: 1.5rem;
   font-weight: 700;
+  color: #000;
 }
 
-#product-price {
-  font-size: 0.75rem;
+.info-container .info #product-price {
+  font-size: 1rem;
   font-weight: 700;
-  color: #999;
+  color: #000;
 }
 
 #btnOrder {
-  font-size: 0.75rem;
-  margin-left: 130px;
-  background-color: #000;
+  font-size: 0.95rem;
+  font-weight: 700;
+  background-color: #b9aec2;
   color: #fff;
   transition: all 0.3s;
   cursor: pointer;
+  width: 100%;
+  height: 50px;
+  border: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding-bottom: 8px;
 }
 
 #btnOrder:hover {
