--- a/src/pages/Product/style.css
+++ b/src/pages/Product/style.css
@@ -1,6 +1,154 @@
 .product {
-    position: relative;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.product .container {
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
+}
+
+.container .left-column {
+  width: 60%;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container .left-column .product-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
+}
+
+.container .right-column {
+  width: 35%;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container .right-column .product-description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container .right-column .product-description h1 {
+  font-size: 26px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.container .right-column .product-description .description {
+  font-size: 16px;
+  color: #666;
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.container .right-column .product-price {
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  display: "flex";
+  flex-direction: column;
+  color: #000;
+}
+
+.container .right-column .product-qauntity {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container .right-column .product-qauntity .quantity {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #b9aec2;
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.container .right-column .product-qauntity .quantity button {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  font-size: 14px;
+  text-align: center;
+  line-height: 25px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  transition: all 0.3s ease;
+}
+
+.container .right-column .product-qauntity .quantity button:hover {
+  color: #ff523b;
+}
+
+.container .right-column .product-qauntity .quantity button:active {
+  transform: scale(0.9);
+}
+
+/* .container .right-column .product-qauntity .add-to-cart-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+} */
+
+.container .right-column .product-qauntity .add-to-cart-btn button {
+  width: 120px;
+  height: 35px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 5px;
+  background-color: #b9aec2;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+
+.container .right-column .product-qauntity .add-to-cart-btn button:hover {
+  background-color: #ff523b;
+}
