--- a/src/pages/SupplierDashboard/style.css
+++ b/src/pages/SupplierDashboard/style.css
@@ -14,47 +14,30 @@
   gap: 20px;
 }
 
-.top-section-container button {
-  background-color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
+.dashboard .top-section .top-section-container h1{
+  font-size: 12px;
 }
 
 
-.container .left-section {
-  flex: 1;
+.upload-container {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.upload-card {
+  width: 100%;
+  max-width: 500px;
   padding: 20px;
-}
-
-.container .left-section-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.container .left-section-container h1 {
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.container .left-section-container .card {
-  background-color: #fff;
   border-radius: 5px;
-  padding: 20px;
+  background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  align-items: center;
 }
 
-
-
+.upload-card h1 {
+  color: rgb(193, 163, 221);
+}
