--- a/src/pages/SupplierDashboard/style.css
+++ b/src/pages/SupplierDashboard/style.css
@@ -28,16 +28,83 @@
 
 .upload-card {
   width: 100%;
+  position: relative;
   max-width: 500px;
   padding: 20px;
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .upload-card h1 {
-  color: rgb(193, 163, 221);
+  font-size: 24px;
+  font-weight: 500;
+  color: #333;
+  margin: 40px 0;
+  text-align: center;
 }
+
+
+.upload-form .input-container {
+  position: relative;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+
+.upload-form .input-container label {
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+}
+
+.upload-form .input-container input {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #333;
+}
+
+.upload-form .input-container input:focus {
+  border-color: #333;
+}
+
+.upload-form .input-container .img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 200px;
+  border: 1px dashed #ddd;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.upload-form .input-container .img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+
+.upload-form button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  background-color: #000;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.upload-form button:hover {
+  background-color: #333;
+}
+
